2005/07/24	muppetman

	* t/GtkLabel.t: Backport a test fix from HEAD; gtk+ changed in 2.7.x,
	so we test that get_layout_offsets() returns two items instead of
	checking their values.

2005/07/24	muppetman

	* xs/GtkDialog.xs, AUTHORS: Patch from lonefox at welho dot com
	changes Gtk2::Dialog::set_alternative_button_order() to accept
	string constants as well as numeric response ids.

	* t/GtkDialog.t: Test response strings as well as numbers.

2005/06/23	kaffeetisch

	* Gtk2.pm, META.yml, NEWS, README: Stable release 1.082.

2005/06/23	kaffeetisch

	Merge from HEAD:

	* t/GtkFileChooserButton.t: Use "open" instead of "save" for the
	dialog since the button doesn't support "save".

	* t/GtkAccelGroup.t, t/GtkAccelMap.t, t/GtkStock.t: Use is()
	instead of is_deeply() to test flags values since the latter was
	changed to always use the string version of overloaded objects in
	recent versions of Test::More, whereas the former seems to work
	correctly.  Tested with Test::More 0.45 and 0.60.

	* t/GtkTreeView.t: Make sure we only enter the row separator
	callback once to make this test more robust.

	* xs/GtkComboBox.xs, xs/GtkComboBoxEntry.xs, xs/GtkDialog.xs,
	xs/GtkList.xs, xs/GtkListItem.xs, xs/GtkMessageDialog.xs: Add or
	beef up a few synopsis and description sections.

	* xs/GtkRadioAction.xs, xs/GtkToggleAction.xs: Add synopsis
	sections that show and explain our custom constructors for these
	types.

2005/06/13	muppetman

	Merge from HEAD:

	* xs/GnomeAboutDialog.xs: Actually store the instances created by
	Gtk2::show_about_dialog(), so that they can be reused.

2005/04/11	kaffeetisch

	* Gtk2.pm, META.yml, Makefile.PL, NEWS, README: Stable release
	1.081.

2005/04/11	kaffeetisch

	Merge from HEAD:

	* xs/GdkDrawable.xs: Update a FIXME comment.

	* xs/GtkIconView.xs: Add a license disclaimer.

	* xs/GtkNotebook.xs: Document that the integer return values are
	new in 1.080.

	* t/GtkDnd.t, xs/GtkDnd.xs: Allow undef for the mask argument of