@@ -4,7 +4,7 @@
 
 use Gtk2::TestHelper
 	at_least_version => [2, 4, 0, "Action-based menus are new in 2.4"],
-	tests => 15, noinit => 0;
+	tests => 16, noinit => 0;
 
 my $action = Gtk2::Action->new (name => 'Open',
                                 label => '_Open',
@@ -59,7 +59,7 @@ $action->set_accel_group (undef);
 $action->set_accel_group (Gtk2::AccelGroup->new);
 
 SKIP: {
-	skip "set_sensitive and set_visible are new in 2.6", 2
+	skip "new 2.6 stuff", 3
 		unless Gtk2->CHECK_VERSION (2, 6, 0);
 
 	$action->set_sensitive(FALSE);
@@ -67,9 +67,11 @@ SKIP: {
 
 	$action->set_visible(FALSE);
 	is ($action->is_visible, FALSE);
+
+	ok (defined $action->get_accel_path);
 }
 
 __END__
 
-Copyright (C) 2003 by the gtk2-perl team (see the file AUTHORS for the
+Copyright (C) 2003-2005 by the gtk2-perl team (see the file AUTHORS for the
 full list).  See LICENSE for more information.
