@@ -1,3 +1,13 @@
+2005/07/27	kaffeetisch
+
+	Merge from HEAD:
+
+	* pm/TestHelper.pm: Use Gtk2::TestHelper instead
+	Gtk2::Test::Helper in the NAME section.
+
+	* t/Gdk.t, t/GdkEvent.t, t/GdkGC.t, t/GtkAccelMap.t,
+	t/GtkAction.t, t/GtkIconTheme.t: Various test fixes/additions.
+
 2005/07/24	muppetman
 
 	* t/GtkLabel.t: Backport a test fix from HEAD; gtk+ changed in 2.7.x,
